# pyxu_nufft

./: README.rst  pyproject.toml  tox.ini
dev/: todo.txt
doc/: conf.py  index.rst
doc/api/: index.rst  operator.rst
doc/examples/: placeholder.ipynb
src/pyxu_nufft/: __init__.py
src/pyxu_nufft/math/: __init__.py  cluster.py  linalg.py  numba.py
src/pyxu_nufft/math/kernel/: _box_template.txt  _kb_template.txt  _kernel.py  _triangle_template.txt
src/pyxu_nufft/operator/: __init__.py  ffs.py  nufft.py
src/pyxu_nufft/operator/spread/: _spread.py  _template.txt
src/pyxu_nufft_tests/math/: test_cluster.py  test_kernel.py  test_linalg.py
src/pyxu_nufft_tests/operator/: test_ffs.py  test_nufft1.py  test_nufft2.py  test_nufft3.py  test_spread.py
