[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

# Metadata ====================================================================
[project]
name = "pyxu_nufft"
dynamic = ["version"]
description = "Pyxu NUFFT Transform Operators."
readme = "README.rst"
requires-python = ">= 3.10, < 3.13"
license = "MIT"
authors = [
    { name = "S. Kashani", email = "sepand@kashani.ch" },
]
classifiers = [
    "Framework :: Pycsou",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls.download = "https://github.com/SepandKashani/pyxu_nufft"
dependencies = [
    # "pyxu >= 2.0, < 3",
    "pyxu",
    "opt-einsum >= 3.3.0, < 4",
]

# Pyxu Entry Points ===========================================================
[project.entry-points."pyxu.operator"]
NUFFT1 = "pyxu_nufft.operator:NUFFT1"
NUFFT2 = "pyxu_nufft.operator:NUFFT2"
NUFFT3 = "pyxu_nufft.operator:NUFFT3"

# Optional dependencies =======================================================
[project.optional-dependencies]
dev = [ "pyxu[dev]", ]


# Get version info from Git ===================================================
[tool.hatch.version]
source = "vcs"

# sdist/wheel config ==========================================================
[tool.hatch.build]
exclude = [
    "/dev",
    "/doc",
    "/src/pyxu_nufft_tests",
]
include = [
    "/src",
]
packages = [
    "src/pyxu_nufft",
]
